--- a/MediaBackupManager/App.xaml
+++ b/MediaBackupManager/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="Styles/HeaderButtons.xaml"/>
                 <ResourceDictionary Source="Styles/ListView.xaml" />
                 <ResourceDictionary Source="Styles/TreeView.xaml" />
+                <ResourceDictionary Source="Styles/ListBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
