--- a/MediaBackupManager/icons/icons.xaml
+++ b/MediaBackupManager/icons/icons.xaml
@@ -8,7 +8,6 @@
         <Setter Property="Data" Value="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z " />
     </Style>
 
-
     <Style x:Key="appbar_magnify" TargetType="Path">
         <Setter Property="Stretch" Value="Fill"/>
         <Setter Property="Fill" Value="#FF000000" />
@@ -32,5 +31,11 @@
         <Setter Property="Fill" Value="#FF000000" />
         <Setter Property="Data" Value="F1 M 54.6818,20.1053L 55.8947,21.3182C 57.4019,22.8254 57.4019,25.2691 55.8947,26.7763L 53.7721,28.8989L 47.1011,22.2279L 49.2237,20.1053C 50.7309,18.5981 53.1746,18.5981 54.6818,20.1053 Z M 36.1848,46.4862L 29.5138,39.8152L 45.8881,23.4408L 52.5592,30.1119L 36.1848,46.4862 Z M 28.9073,42.241L 33.759,47.0927L 27.0251,48.9749L 28.9073,42.241 Z M 19,57L 19,25L 40.8063,25L 36.8063,29L 23,29L 23,53L 53,53L 53,32.6912L 57,28.6911L 57,57L 19,57 Z " />
     </Style>
-    
+
+    <Style x:Key="appbar_check" TargetType="Path">
+        <Setter Property="Stretch" Value="Fill"/>
+        <Setter Property="Fill" Value="#FF000000" />
+        <Setter Property="Data" Value="F1 M 23.7501,33.25L 34.8334,44.3333L 52.2499,22.1668L 56.9999,26.9168L 34.8334,53.8333L 19.0001,38L 23.7501,33.25 Z " />
+    </Style>
+
 </ResourceDictionary>
