--- a/MediaBackupManager/View/ExclusionListView.xaml
+++ b/MediaBackupManager/View/ExclusionListView.xaml
@@ -95,15 +95,9 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox Grid.Column="0">
-                    <TextBox.Text>
-                        <Binding Path="NewExclusionText" UpdateSourceTrigger="PropertyChanged">
-                            <Binding.ValidationRules>
-                                <local:StringNotEmptyRule />
-                            </Binding.ValidationRules>
-                        </Binding>
-                    </TextBox.Text>
-                </TextBox>
+                
+                <TextBox Grid.Column="0" Text="{Binding NewExclusionText, UpdateSourceTrigger=PropertyChanged}" />
+
                 <Button Grid.Column="1" Style="{StaticResource IconButtonBlue}"
                                         Width="23" Height="20" Margin="3,0"
                                         Command="{Binding AddExclusionCommand}"
