--- a/MediaBackupManager/Styles/ListView.xaml
+++ b/MediaBackupManager/Styles/ListView.xaml
@@ -110,7 +110,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                    <Grid>
+                    <Grid SnapsToDevicePixels="True">
                         <Border BorderThickness="1,1,0,1" BorderBrush="LightGray" Background="#FFE8E8E8">
                             <TextBlock x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,0" Width="{TemplateBinding Width}" TextAlignment="Center" />
                         </Border>
