--- a/MediaBackupManager/View/Popups/OKCancelPopup.xaml
+++ b/MediaBackupManager/View/Popups/OKCancelPopup.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:MediaBackupManager.View.Popups"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+    <Grid VerticalAlignment="Center" Margin="0,10">
         <TextBlock DockPanel.Dock="Left" Text="{Binding Message}"/>
     </Grid>
 </UserControl>
