--- a/MediaBackupManager/Styles/HeaderButtons.xaml
+++ b/MediaBackupManager/Styles/HeaderButtons.xaml
@@ -25,7 +25,7 @@
     <SolidColorBrush x:Key="ButtonBlue.Disabled.Border" Color="Black"/>
 
     <Style x:Key="HeaderButton" TargetType="{x:Type Button}">
-        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="FontFamily" Value="./Font/#Roboto"/>
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Margin" Value="3,5" />
         <Setter Property="Padding" Value="10,0" />
